Classe plateau de jeux compléter, reste à modifier la fonction principale pour mettre des sous-fonctions